# risc0-btc

./: bench_no_seal_sum  bench_with_seal  bench_with_seal_sum  block80.raw  plan.markdown  run_scatter.bash  sha_scatter_sealed  sha_scatter_sealed_panic  sum_with_seal
factors/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/core/: Cargo.toml
methods/guest/: Cargo.toml  build.rs  build.rs.off2
methods/src/: bench.rs  lib.rs
plot/: scatter.gnuplot
