[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "52c48e0da6294b94151a31120b8f70b1b8d3576b" }

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
bytemuck = "1.12"
serde = { version = "1.0", default-features = false, features = ["derive"] }
