[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "094ef539ec2e20989704b440f79b9e473c3f44ca" }

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
bytemuck = "1.12"
serde = { version = "1.0", default-features = false, features = ["derive"] }
