[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
# risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "52c48e0da6294b94151a31120b8f70b1b8d3576b" }
# risc0-build = { path = "/home/matthias/zk/risc0/risc0/build" }
# risc0-build = { git = "https://github.com/matthiasgoergens/risc0.git", rev = "bc6ba90fa567f613944bcb6d00bb791b439b8f54" }
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "094ef539ec2e20989704b440f79b9e473c3f44ca" }

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
bytemuck = "1.12"
serde = { version = "1.0", default-features = false, features = ["derive"] }
