[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
# risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "52c48e0da6294b94151a31120b8f70b1b8d3576b" }
risc0-build = { git = "https://github.com/matthiasgoergens/risc0.git", rev = "bc6ba90fa567f613944bcb6d00bb791b439b8f54" }
# risc0-build = { path = "/home/matthias/zk/risc0/risc0/build" }

[dependencies]
# risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "52c48e0da6294b94151a31120b8f70b1b8d3576b", default-features = false }
risc0-zkvm = { git = "https://github.com/matthiasgoergens/risc0.git", rev = "bc6ba90fa567f613944bcb6d00bb791b439b8f54", default-features = false }
# risc0-zkvm = { path = "/home/matthias/zk/risc0/risc0/zkvm" }
