[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "094ef539ec2e20989704b440f79b9e473c3f44ca" }

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "094ef539ec2e20989704b440f79b9e473c3f44ca", default-features = false }
risc0-zkvm-platform = { git = "https://github.com/risc0/risc0.git", rev = "094ef539ec2e20989704b440f79b9e473c3f44ca", default-features = false }
methods = { path = "../", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
